; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yylex_init.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yylex_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yylex_init(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  store i32** %0, i32*** %3, align 8
  %4 = load i32**, i32*** %3, align 8
  %5 = icmp eq i32** %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  store i32 %7, i32* @errno, align 4
  store i32 1, i32* %2, align 4
  br label %24

8:                                                ; preds = %1
  %9 = call i64 @yyalloc(i32 4, i32* null)
  %10 = inttoptr i64 %9 to i32*
  %11 = load i32**, i32*** %3, align 8
  store i32* %10, i32** %11, align 8
  %12 = load i32**, i32*** %3, align 8
  %13 = load i32*, i32** %12, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %8
  %16 = load i32, i32* @ENOMEM, align 4
  store i32 %16, i32* @errno, align 4
  store i32 1, i32* %2, align 4
  br label %24

17:                                               ; preds = %8
  %18 = load i32**, i32*** %3, align 8
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @memset(i32* %19, i32 0, i32 4)
  %21 = load i32**, i32*** %3, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @yy_init_globals(i32* %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %17, %15, %6
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @yyalloc(i32, i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @yy_init_globals(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
